Fix site logo vertical alignment for improved display on various screen sizes

--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -85,12 +85,12 @@
     width: auto;
     vertical-align: middle;
     display: inline-block;
-    transform: translateY(-8px);
+    transform: translateY(-6px);
 
     // For screens smaller than medium
     @include breakpoint(max-width $medium) {
         max-height: 20px;
-        transform: translateY(-1px);
+        transform: translateY(-2px);
     }
 }
 
